# inquisitors

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml
client/: package-lock.json  package.json
client/public/: index.html
client/scss/: custom.scss
client/src/: App.vue  main.js
client/src/assets/: randomNames.json
client/src/components/: BurnAtTheStake.vue  EllipticCurvePoc.vue  GameRoom.vue  HomePage.vue  InvertMessage.vue  JoinPrompt.vue  SimplePing.vue  WebSocketTest.vue
client/src/libs/: avnet-core.js  avnet-msgs.js  avnet_msgs.js  tls.js  zkp.js
client/src/router/: index.js
client/src/services/: AVN.js  TLS.js
resources/: rootCA.key  rootCA.pem
server/: setup.cfg  setup.py
server/src/: config.py  inquisitors.py
server/src/inquisitors-server/: __init__.py  __main__.py  game_rooms.py  http_api.py  player.py  rooms.py  socketio_api.py  views.py
server/src/server-config/: __init__.py
