[metadata]
name = inquisitors_server
description = Backend for Inquisitors social game
long_description=__doc__
license = MIT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = inquisitors-server, server-config
include_package_data=True,
install_requires =
    flask >= 2.1.2
    flask_cors >= 3.0.10
    flask_socketio >= 5.2.0
package_dir = =src
python_requires = >=3.8
